objects/Test_Execution_Cycle__c.object
<CustomObject>
    <fields>
        <fullName>Environment__c</fullName>
        <label>Environment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sandbox</fullName>
                </value>
                <value>
                    <fullName>Production</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Execution_End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Execution End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Execution_Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Execution Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Execution_Type__c</fullName>
        <label>Execution Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unit Test</fullName>
                </value>
                <value>
                    <fullName>SIT</fullName>
                </value>
                <value>
                    <fullName>Regression Test</fullName>
                </value>
                <value>
                    <fullName>UAT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Release_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release Name</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipLabel>Test Execution Cycles</relationshipLabel>
        <relationshipName>Test_Execution_Cycles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Test Execution Cycle</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Execution Cycle Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Execution Cycles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>